<resources>
    <string name="mohammad">Good Day! Mohammad</string>
    <string name="app_name">Uni-Trust</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="uni_trust_splash">
            <font color="#180D82">Uni-</font><font color="#FF0000"><b>T</b></font><font color="#180D82">rust</font>
    </string>
    <string name="moto_splash">Elevate Your Drive, Elevate Your Style.
        Seamless Car Service and Laundry Bliss Await. Your Journey, Perfected
    </string>
    <string name="hello_with_exclamatory_color">
        Hello
        <font color="#FF0000"><b>!</b></font>
    </string>
    <string name="sign_in">Sign In</string>
    <string name="not_a_member_register">
        New to
        <font color="#180D82"><b>Uni</b> </font>
        <font color="#FF0000"><b>T</b></font><font color="#180D82">rust?</font>
        <u><b> Register</b></u>
    </string>
    <string name="hi">Hi<font color="#FF0000"><b>!</b></font></string>
    <string name="welcome">Welcome<font color="#FF0000"><b>!</b></font></string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_your_phone_number">Please enter phone number</string>
    <string name="please_select_your_area">Please select area</string>
    <string name="please_enter_your_address">Please enter address</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account">Have an account?</string>
    <string name="create_an_account">Create an account</string>
    <string name="we_have_sent_an_otp_to_your_number_please_enter">We have sent an OTP to your number, please enter</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="validate">Validate</string>
    <string name="good_day">Good Day</string>
    <string name="services">Services</string>
    <string name="uni_trust_at_google_maps">
        Uni-Trust At
        <font color="#1246F7"><b>G</b></font><font color="#DB2602"><b>o</b></font><font color="#EDD400"><b>o</b></font><font color="#1246F7"><b>g</b></font><font color="#04CD13"><b>l</b></font><font color="#DB2602"><b>e</b></font>
        Maps
    </string>
    <string name="locate_us">Locate Us</string>
    <string name="dev_name">Abdullah-Al-Noman</string>
    <string name="developed_by_arc">Developed by ARC</string>
    <string name="create_car_service_request">Create Car\nService Request</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="demo_phone">01718228277</string>
    <string name="service_area">Service Area</string>
    <string name="service_details">Service Details</string>
    <string name="submit">Submit</string>
    <string name="request_a_service">Create a car\nservice request</string>
    <string name="select_area">Select Area</string>
    <string name="select">Select</string>
    <string name="please_enter_service_details">Please enter service details</string>
    <string name="create_a_laundry_nservice_request">Create a laundry \nservice request</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="update_your_ninformation">Update your\ninformation</string>
    <string name="update">Update</string>
    <string name="secondary_phone_number">Secondary Phone Number</string>
    <string name="we_are_uni_trust">
         We Are
        <font color="#180D82"><b>Uni-</b></font><font color="#FF0000"><b>T</b></font><font color="#180D82">rust</font>
    </string>
    <string name="about_us_moto">our trusted car and laundry service near you.</string>
    <string name="about_us_second_moto">Welcome to Uni-Trust, your go-to destination for seamless car and laundry services in the vibrant neighborhoods of Mohammadpur and Shayamoli in Dhaka. At Uni-Trust, we pride ourselves on delivering top-notch services that redefine convenience, reliability, and trust.</string>
    <string name="our_mission">Our Mission</string>
    <string name="about_us_our_mission">At Uni-Trust, our mission is to simplify and elevate your daily tasks by providing exceptional car servicing and laundry solutions. We aim to be the trusted partner that seamlessly integrates into your lifestyle, making chores easier and more efficient.</string>
    <string name="why_choose_uni_trust">Why Choose Uni-Trust?</string>
    <string name="about_us_get_stared_with_uni_trust">Whether it\'s a car tune-up or a laundry refresh, Uni-Trust is here to simplify your day. To start with simply request for a service from dashboard.</string>
    <string name="payment_info"><u>Payment Info</u></string>
    <string name="view_details"><u>View Details</u></string>
    <string name="payment_details"><u>Payment Details</u></string>
    <string name="service_history">Service History</string>
    <string name="search">Search</string>
    <string name="alternative_phone_no">Alternative Phone No</string>
    <string name="demo_address">77/A,Town hall, Mohammadpur</string>
    <string name="please_enter_transaction_id">Please enter transaction id</string>
    <string name="add_payment_details">Add Payment Details</string>
    <string name="confirm">Confirm</string>

    <string name="pls_check_internet">Please check internet connection!</string>
    <string name="please_enter_valid_phone_number">Please enter valid phone number</string>

    <string name="toast_type_default">default</string>
    <string name="toast_type_success">success</string>
    <string name="toast_type_error">error</string>
    <string name="toast_type_warning">warning</string>
    <string name="please_enter_your_valid_address">Please enter your valid address</string>
    <string name="please_enter_your_full_name">Please enter your full name</string>
    <string name="loading">Loading\n</string>
    <string name="invalid_otp">Please enter valid OTP!</string>
    <string name="area">Area</string>
    <string name="phone_no">Phone No</string>
    <string name="please_enter_alternative_phone_no">Please enter alternative phone no</string>
    <string name="txt_continue">Continue</string>
    <string name="payment_information">Payment Information</string>
    <string name="these_are_the_online_payment_methods_we_support_right_now">These are the online payment methods we support right now.</string>
    <string name="bkash_payment">bKash Payment</string>
    <string name="nagad_payment">Nagad Payment</string>
    <string name="rocket_payment">Rocket Payment</string>
    <string name="nexus_payment">Nexus Payment</string>
    <string name="open_google_map">Open  <font color="#1246F7"><b>G</b></font><font color="#DB2602"><b>o</b></font><font color="#EDD400"><b>o</b></font><font color="#1246F7"><b>g</b></font><font color="#04CD13"><b>l</b></font><font color="#DB2602"><b>e</b></font> Map</string>
    <string name="sign_out">Sign Out</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmation">Confirmation</string>
    <string name="select_payment_type">Select Payment Type</string>
    <string name="cash">Cash</string>
    <string name="mobile_banking">Mobile Banking</string>
    <string name="select_payment_method">Select payment method</string>
</resources>