<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.user.ProfileUpdateFragment">

<ImageView
    android:id="@+id/ivBack"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="16dp"
    android:src="@drawable/baseline_arrow_back_ios_new_24"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:contentDescription="@string/app_name" />


<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="@dimen/dp16"
    android:fontFamily="@font/open_sans"
    android:text="@string/update_your_ninformation"
    android:textColor="@color/semi_black"
    android:textSize="@dimen/sp28"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/ivBack" />


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginTop="@dimen/dp10"
                android:fontFamily="@font/open_sans"
                android:text="@string/name"
                android:textColor="@color/semi_black"
                android:textSize="@dimen/sp18">

            </TextView>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp20"
                app:boxStrokeColor="@color/semi_black"
                app:cursorColor="@color/semi_black"
                app:cursorErrorColor="@color/red"
                app:hintTextColor="@color/semi_black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/dp10"
                    android:fontFamily="@font/open_sans"
                    android:hint="@string/please_enter_your_name"
                    android:inputType="textMultiLine"
                    android:maxLength="50"
                    android:text="Mohammad" />


            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginTop="@dimen/dp10"
                android:fontFamily="@font/open_sans"
                android:text="@string/phone_number"
                android:textColor="@color/semi_black"
                android:textSize="@dimen/sp18">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp20"
                app:boxStrokeColor="@color/semi_black"
                app:cursorColor="@color/semi_black"
                app:cursorErrorColor="@color/red"
                app:hintTextColor="@color/semi_black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/dp10"
                    android:focusable="false"
                    android:fontFamily="@font/open_sans"
                    android:hint="@string/please_enter_your_phone_number"
                    android:inputType="none"
                    android:maxLength="11" />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginTop="@dimen/dp10"
                android:fontFamily="@font/open_sans"
                android:text="@string/alternative_phone_no"
                android:textColor="@color/semi_black"
                android:textSize="@dimen/sp18">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sPhone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp20"
                app:boxStrokeColor="@color/semi_black"
                app:cursorColor="@color/semi_black"
                app:cursorErrorColor="@color/red"
                app:hintTextColor="@color/semi_black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhoneNumberAlternative"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/dp10"
                    android:fontFamily="@font/open_sans"
                    android:hint="@string/please_enter_alternative_phone_no"
                    android:inputType="number"
                    android:maxLength="11" />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginTop="@dimen/dp10"
                android:fontFamily="@font/open_sans"
                android:text="@string/area"
                android:textColor="@color/semi_black"
                android:textSize="@dimen/sp18">

            </TextView>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/area"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp20"
                app:boxStrokeColor="@color/semi_black"
                app:cursorColor="@color/semi_black"
                app:cursorErrorColor="@color/red"
                app:endIconTint="@color/semi_black"
                app:hintTextColor="@color/semi_black">

                <AutoCompleteTextView
                    android:id="@+id/etArea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/dp10"
                    android:fontFamily="@font/open_sans"
                    android:hint="@string/select_area"
                    android:focusable="false"
                    android:inputType="none" />


            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginTop="@dimen/dp10"
                android:fontFamily="@font/open_sans"
                android:text="@string/address"
                android:textColor="@color/semi_black"
                android:textSize="@dimen/sp18">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp20"
                app:boxStrokeColor="@color/semi_black"
                app:cursorColor="@color/semi_black"
                app:cursorErrorColor="@color/red"
                app:hintTextColor="@color/semi_black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/dp10"
                    android:fontFamily="@font/open_sans"
                    android:hint="@string/please_enter_your_address"
                    android:inputType="textMultiLine"
                    android:maxLength="200"
                    android:text="@string/demo_address" />


            </com.google.android.material.textfield.TextInputLayout>


            <ProgressBar
                android:id="@+id/progressbar_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dp10"
                android:progressTint="@color/white"
                android:secondaryProgressTint="#E4EDE4"
                android:visibility="gone" />


            <TextView
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginStart="@dimen/dp24"
                android:layout_marginTop="@dimen/dp24"
                android:layout_marginEnd="@dimen/dp24"
                android:layout_marginBottom="@dimen/dp20"
                android:background="@drawable/rounded_bg_20_dp"
                android:backgroundTint="@color/semi_black"
                android:fontFamily="@font/open_sans"
                android:gravity="center"
                android:text="@string/update"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

<ImageView
    android:id="@+id/imageView"
    android:layout_width="@dimen/dp100"
    android:layout_height="@dimen/dp100"
    android:layout_marginStart="248dp"
    android:layout_marginEnd="8dp"
    android:visibility="gone"
    android:src="@drawable/profile_icon"
    app:layout_constraintBottom_toBottomOf="@+id/textView2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="@+id/textView2"
    app:layout_constraintTop_toTopOf="@+id/textView2"
    android:contentDescription="@string/app_name" />


</androidx.constraintlayout.widget.ConstraintLayout>